# EdgePilot

./: .env.example  .gitignore  Makefile  README.md
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 8aa401164613_trades.py  b9c69876be71_screenshots.py  d147c8faef8c_ai_insights.py  d7336971272c_strategies.py  e71acace8103_risk_rules.py  efc2b893ff80_market_contexts.py  fbd74b77dcf5_users_user_settings_refresh_tokens.py
backend/app/: main.py
backend/app/api/: __init__.py  deps.py
backend/app/core/: config.py  database.py  exceptions.py  logging.py  security.py
backend/app/models/: __init__.py  ai_insight.py  base.py  market_context.py  rule.py  screenshot.py  strategy.py  trade.py  user.py
backend/app/repositories/: ai_insight_repo.py  market_context_repo.py  refresh_token_repo.py  rule_repo.py  screenshot_repo.py  strategy_repo.py  trade_repo.py  user_repo.py
backend/app/schemas/: ai.py  analytics.py  auth.py  market_context.py  rule.py  screenshot.py  strategy.py  trade.py  user.py
backend/app/services/: analytics_engine.py  analytics_service.py  auth_service.py  market_context_service.py  outcome_service.py  risk_engine.py  rule_engine.py  rule_seeds.py  rule_service.py  screenshot_service.py  settings_service.py  strategy_seeds.py  strategy_service.py  trade_service.py
backend/tests/: conftest.py
backend/tests/integration/: test_ai.py  test_analytics.py  test_auth.py  test_health.py  test_journal.py  test_market_context.py  test_rules.py  test_screenshots.py  test_settings.py  (+2 more)
(+98 files in other folders)
